Naftah - updated jvm options - gradle